@@ -1,166 +1,124 @@
 package co.edu.unbosque.beans;
 
 import java.io.Serializable;
-
 import co.edu.unbosque.estructures.MyLinkedList;
-import co.edu.unbosque.estructures.Node;
 import co.edu.unbosque.model.Jugador;
-import co.edu.unbosque.model.Usuario;
 import co.edu.unbosque.model.UsuarioActual;
 import co.edu.unbosque.service.JugadorService;
-import co.edu.unbosque.util.AESUtil;
 import jakarta.annotation.PostConstruct;
 import jakarta.enterprise.context.SessionScoped;
 import jakarta.faces.application.FacesMessage;
 import jakarta.faces.context.FacesContext;
 import jakarta.inject.Named;
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.net.URLEncoder;
 
-/**
- * Bean de sesión encargado del proceso de autenticación de usuarios. Usa
- * MyLinkedList en lugar de ArrayList.
- */
 @Named(value = "loginbean")
 @SessionScoped
 public class LogInBean implements Serializable {
 
 	private static final long serialVersionUID = 1L;
-
 	private String user;
 	private String password;
-	private Usuario sesionIniciada;
-	private static MyLinkedList<Jugador> listUsers = new MyLinkedList<>();
+	private Jugador sesionIniciada;
+	private MyLinkedList<Jugador> listUsers = new MyLinkedList<>();
 
-	public LogInBean() {
-		cargarUsuarios();
-	}
-
-//
-//	public void iniciarSesion() {
-//	    boolean encontrado = false;
-//	    System.out.println(listUsers.toString());
-//	    for (int i = 0; i < listUsers.size(); i++) {
-//	        Node<Jugador> nodo = listUsers.getPos(i);
-//	        if (nodo == null)
-//	            continue;
-//
-//	        Jugador usuario = nodo.getInfo();
-//
-//	        try {
-//	            String nombreEncriptado = usuario.getNombre();
-//	            String contrasenaEncriptada = usuario.getContrasena();
-//
-//	            if (nombreEncriptado == null || contrasenaEncriptada == null)
-//	                continue;
-//	            System.out.println("qweqweqw");
-//	            String usuarioN = AESUtil.decrypt(nombreEncriptado);
-//	            String contrasenaN = AESUtil.decrypt(contrasenaEncriptada);
-//
-//	            if (usuarioN == null) usuarioN = nombreEncriptado;
-//	            if (contrasenaN == null) contrasenaN = contrasenaEncriptada;
-//
-//	            if (usuarioN != null && contrasenaN != null
-//	                    && usuarioN.trim().equalsIgnoreCase(user.trim())
-//	                    && contrasenaN.trim().equals(password.trim())) {
-//
-//	                showStickyLogin("202", "Sesión iniciada exitosamente");
-//	                UsuarioActual.setUsuarioActual(usuario);
-//	                password = "";
-//	                encontrado = true;
-//	                break;
-//	            }
-//
-//	        } catch (Exception e) {
-//	            e.printStackTrace();
-//	        }
-//	    }
-//
-//	    if (!encontrado) {
-//	        showStickyLogin("401", "Credenciales inválidas");
-//	        password = "";
-//	    }
-//	}
-//
-//	public void cargarUsuarios() {
-//		MyLinkedList<Jugador> jugadores = JugadorService.doGetAll("http://localhost:8081/jugadores/listar");
-//		for (int i = 0; i < jugadores.size(); i++) {
-//			Node<Jugador> nodo = jugadores.getPos(i);
-//			if (nodo != null) {
-//				listUsers.addLast(nodo.getInfo());
-//			}
-//		}
-//	}
-	public void iniciarSesion() {
-		if (user == null || password == null || user.isBlank() || password.isBlank()) {
-			showStickyLogin("400", "Debe ingresar usuario y contraseña");
-			return;
+	public String iniciarSesion() {
+		if (user == null || user.trim().isEmpty() || password == null || password.trim().isEmpty()) {
+			showStickyLogin("400", "Usuario y contraseña son obligatorios");
+			return null;
 		}
 
-		if (listUsers == null || listUsers.size() == 0) {
-			showStickyLogin("404", "No hay usuarios cargados");
-			return;
-		}
+		try {
+			String backendUrl = "http://localhost:8081/jugadores/login?correo=" + URLEncoder.encode(user, "UTF-8")
+					+ "&contrasena=" + URLEncoder.encode(password, "UTF-8");
 
-		for (int i = 0; i < listUsers.size(); i++) {
-			Jugador jugador = listUsers.get(i);
+			URL url = new URL(backendUrl);
+			HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+			connection.setRequestMethod("POST");
+			connection.setDoOutput(true);
 
-			try {
-				String nombreDescifrado = AESUtil.decrypt(jugador.getNombre());
-				String contrasenaDescifrada = AESUtil.decrypt(jugador.getContrasena());
+			int responseCode = connection.getResponseCode();
+			BufferedReader reader = new BufferedReader(
+					new InputStreamReader((responseCode >= 200 && responseCode < 400) ? connection.getInputStream()
+							: connection.getErrorStream()));
 
-				if (nombreDescifrado != null && contrasenaDescifrada != null && nombreDescifrado.equals(user)
-						&& contrasenaDescifrada.equals(password)) {
-
-					sesionIniciada = jugador;
-					UsuarioActual.setUsuarioActual(jugador);
-					showStickyLogin("200", "Sesión iniciada exitosamente");
-
-					return;
-				}
-
-			} catch (Exception e) {
-				System.err.println("Error al descifrar credenciales: " + e.getMessage());
+			StringBuilder response = new StringBuilder();
+			String line;
+			while ((line = reader.readLine()) != null) {
+				response.append(line);
 			}
-		}
+			reader.close();
 
-		showStickyLogin("401", "Credenciales inválidas");
-		password = "";
+			String mensaje = response.toString();
+
+			switch (responseCode) {
+			case 200:
+	            showStickyLogin("200", "Sesión iniciada exitosamente");
+	            this.sesionIniciada = new Jugador();
+	            this.sesionIniciada.setCorreo(user); 
+	            UsuarioActual.setUsuarioActual(this.sesionIniciada); 
+	            return "/grupo.xhtml?faces-redirect=true";
+			case 400:
+				showStickyLogin("400", "Correo y contraseña son obligatorios");
+				break;
+			case 401:
+				showStickyLogin("401", "Correo o contraseña incorrectos");
+				break;
+			case 406:
+				showStickyLogin("406", "Correo inválido. Use gmail, hotmail, outlook o unbosque.edu.co");
+				break;
+			default:
+				showStickyLogin("500", "Error interno del servidor");
+				break;
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			showStickyLogin("500", "Error interno del servidor");
+		}
+		return null;
 	}
 
-	public static void main(String[] args) {
-		MyLinkedList<Jugador> jugadores = JugadorService.doGetAll("http://localhost:8081/jugadores/listar");
-		for (int i = 0; i < jugadores.size(); i++) {
-			listUsers.addLast(jugadores.get(i));
-		}
-	}
-	
-	@PostConstruct
-	public void cargarUsuarios() {
-		MyLinkedList<Jugador> jugadores = JugadorService.doGetAll("http://localhost:8081/jugadores/listar");
-		for (int i = 0; i < jugadores.size(); i++) {
-			listUsers.addLast(jugadores.get(i));
-		}
-	}
-
-	public void showStickyLogin(String code, String content) {
+	private void showStickyLogin(String code, String content) {
 		FacesMessage.Severity severity;
 		String title;
 
 		switch (code) {
-		case "202":
+		case "200":
 			severity = FacesMessage.SEVERITY_INFO;
-			title = "Hecho";
+			title = "Éxito";
+			break;
+		case "400":
+			severity = FacesMessage.SEVERITY_WARN;
+			title = "Advertencia";
 			break;
 		case "401":
-			severity = FacesMessage.SEVERITY_WARN;
+			severity = FacesMessage.SEVERITY_ERROR;
+			title = "Error";
+			break;
+		case "406":
+			severity = FacesMessage.SEVERITY_ERROR;
 			title = "Error";
 			break;
 		default:
 			severity = FacesMessage.SEVERITY_ERROR;
-			title = "Error Critico";
-			content = "Error al crear, comuníquese con el administrador";
+			title = "Error Crítico";
+			break;
 		}
-
 		FacesContext.getCurrentInstance().addMessage("sticky-key", new FacesMessage(severity, title, content));
+	}
+
+	@PostConstruct
+	public void cargarUsuarios() {
+		MyLinkedList<Jugador> jugadores = JugadorService.doGetAll("http://localhost:8081/jugadores/listar");
+		if (jugadores != null) {
+			for (int i = 0; i < jugadores.size(); i++) {
+				listUsers.addLast(jugadores.get(i));
+			}
+		}
 	}
 
 	public String getUser() {
@@ -179,20 +137,8 @@ public class LogInBean implements Serializable {
 		this.password = password;
 	}
 
-	public MyLinkedList<Jugador> getListUsers() {
-		return listUsers;
-	}
-
-	public void setListUsers(MyLinkedList<Jugador> listUsers) {
-		this.listUsers = listUsers;
-	}
-
 	public boolean getSesionIniciada() {
 		return UsuarioActual.getUsuarioActual() != null;
-	}
-
-	public void setSesionIniciada(Jugador sesionIniciada) {
-		this.sesionIniciada = sesionIniciada;
 	}
 
 	public String cerrarSesion() {
@@ -200,12 +146,7 @@ public class LogInBean implements Serializable {
 		return "index.xhtml?faces-redirect=true";
 	}
 
-	/**
-	 * @return {@code true} si el usuario autenticado es un administrador.
-	 */
 	public boolean getAdminIniciada() {
 		return UsuarioActual.getUsuarioActual() instanceof Jugador;
-
 	}
-
 }
